cleaned up files

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ first_n/
 obj17/
 obj17_15/
 data/exp12_training_data/
+exp12_attempt
 
 Mirrored_Images_Training/
 # Byte-compiled / optimized / DLL files
